# eat-it

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/PRD/: PRD.md  future-features.md
.planning/UI/: DESIGN.md  README.md  components.json  index.html  package.json  style-guide.json  tailwind.config.js  tailwind.config.shadcn.js
.planning/UI/screens/: recipe-binder-finalized-nordic.html  recipe-detail-synchronized-blue.html  recipe-import-finalized-nordic.html  shopping-list-synchronized-blue.html
.planning/UI/src/: App.tsx  AppShadcn.tsx  index.css  index.shadcn.tsx
.planning/UI/src/components/recipe-binder/: RecipeBinderScreen.tsx
.planning/UI/src/components/recipe-import/: RecipeImportScreen.tsx
.planning/UI/src/components/screens-shadcn/: RecipeBinderScreen.tsx  RecipeDetailScreen.tsx  ShoppingListScreen.tsx  index.ts
.planning/UI/src/components/shadcn/: badge.tsx  index.ts  (+1 more)
.planning/UI/src/hooks/: index.ts  useRecipeBinder.ts  useShoppingList.ts
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/debug/: docker-typescript-build-errors.md  fastapi-dev-mode-404-frontend.md
.planning/phases/01-foundation-and-data-layer/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md  01-UAT.md  01-VERIFICATION.md
.planning/phases/02-recipe-import-and-crud/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  02-05-PLAN.md  02-05-SUMMARY.md  02-CONTEXT.md  02-RESEARCH.md  02-VERIFICATION.md  deferred-items.md
.planning/phases/03-semantic-search/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-CONTEXT.md  03-RESEARCH.md  03-UAT.md  03-VERIFICATION.md
.planning/phases/04-shopping-list/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  04-CONTEXT.md  04-RESEARCH.md  04-UAT.md  04-VERIFICATION.md
.planning/phases/04.1-recipe-ingredient-management-crud-endpoints-for-ingredient-groups-and-ingredients/: 04.1-01-PLAN.md  04.1-01-SUMMARY.md  04.1-02-PLAN.md  04.1-02-SUMMARY.md  04.1-03-PLAN.md  04.1-03-SUMMARY.md  04.1-CONTEXT.md  04.1-RESEARCH.md  04.1-UAT.md  04.1-VALIDATION.md  04.1-VERIFICATION.md
.planning/phases/05-frontend-and-deployment/: 05-00-PLAN.md  05-00-SUMMARY.md  05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-03-PLAN.md  05-03-SUMMARY.md  05-04-PLAN.md  05-04-SUMMARY.md  05-05-PLAN.md  05-05-SUMMARY.md  05-06-PLAN.md  05-06-SUMMARY.md  05-CONTEXT.md  05-RESEARCH.md  05-UAT.md  05-VALIDATION.md  05-VERIFICATION.md  deferred-items.md
.planning/phases/05.1-ingredient-management-frontend/: 05.1-01-PLAN.md  05.1-01-SUMMARY.md  05.1-02-PLAN.md  05.1-02-SUMMARY.md  05.1-03-PLAN.md  05.1-03-SUMMARY.md  05.1-04-PLAN.md  05.1-04-SUMMARY.md  05.1-05-PLAN.md  05.1-CONTEXT.md  05.1-RESEARCH.md  05.1-UAT.md  05.1-VALIDATION.md  05.1-VERIFICATION.md
.planning/phases/06-frontend-integration-wire-up-real-screen-components-in-app-tsx-add-missing-routes-and-connect-hooks-to-backend-api/: 06-01-PLAN.md  06-01-SUMMARY.md  06-02-PLAN.md  06-03-PLAN.md  06-03-SUMMARY.md  06-04-PLAN.md  06-04-SUMMARY.md  06-CONTEXT.md  06-RESEARCH.md  06-UAT.md  06-VALIDATION.md  06-VERIFICATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
alembic/: env.py
alembic/versions/: 001_initial.py  20260225_153457_add_recipe_rating_notes.py  20260303_161427_add_recipe_embeddings.py  20260304_011530_add_store_sections.py  20260304_120601_add_ingredient_display_order.py
docker/: .dockerignore  Dockerfile
frontend/: package.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  index.shadcn.css
frontend/src/__tests__/: App.test.tsx  api.test.ts  setup.ts  useRecipes.test.tsx
frontend/src/components/: RecipeDetailModal.tsx  index.ts
frontend/src/components/ingredients/: DragHandle.tsx  IngredientGroup.tsx  IngredientRow.tsx  IngredientSection.tsx  SortableIngredientRow.tsx  index.ts
frontend/src/components/layout/: AppLayout.tsx  BottomNav.tsx  Header.tsx  Sidebar.tsx
frontend/src/components/recipe-binder/: RecipeBinderScreen.tsx  index.ts
frontend/src/components/recipe-detail/: RecipeDetailScreen.tsx
frontend/src/components/recipe-import/: RecipeImportScreen.tsx  index.ts
frontend/src/components/screens/: SearchScreen.tsx
frontend/src/components/screens-shadcn/: RecipeBinderScreen.tsx  RecipeImportScreen.tsx  ShoppingListScreen.tsx
frontend/src/components/shadcn/: button.tsx  input.tsx  tabs.tsx
frontend/src/components/shopping/: ShoppingListScreen.tsx  index.ts
frontend/src/components/ui/: Button.tsx  Input.tsx  Tag.tsx  TouchButton.tsx  index.ts
frontend/src/hooks/: index.ts  useIngredients.ts  useRecipeImport.ts  useRecipes.ts  useSearch.ts  useShoppingList.ts
frontend/src/lib/: api.ts
frontend/src/types/: ingredient.ts  recipe.ts  shopping.ts
src/eat_it/: __init__.py  config.py  database.py  main.py
src/eat_it/models/: __init__.py  recipe.py  settings.py  shopping_list.py  store_section.py
src/eat_it/routers/: __init__.py  health.py  ingredients.py  recipes.py  search.py  shopping_lists.py
src/eat_it/schemas/: __init__.py  ingredient.py  recipe.py  shopping_list.py
src/eat_it/services/: __init__.py  embedding.py  importer_registry.py  ingredient_combiner.py  recipe_parser.py  section_categorizer.py
src/eat_it/websocket/: __init__.py  manager.py
tests/: __init__.py  conftest.py  test_config.py  test_ingredient_model.py  test_ingredients_crud.py  test_recipe_parse.py  test_recipes_crud.py  test_recipes_embeddings.py  test_search.py  test_sqlite_vec.py  test_staticfiles.py
tests/e2e/: test_docker_deployment.py
(+10 files in other folders)
